--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm">
+<form [formGroup]="loginForm" autocomplete="off">
         <div class="container">
             <p>{{authError?.message}}</p>
           <h1>Login</h1>
