--- a/src/styles.css
+++ b/src/styles.css
@@ -56,3 +56,42 @@
     background-color: #f1f1f1;
     text-align: center;
   }
+  .header-container{
+    width: 100%;
+  }
+
+  .header-actions{
+      margin: 0;   
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      
+      -webkit-flex-flow: row wrap;
+      justify-content: flex-end;
+  }
+  .header-actions button{
+    text-decoration: none;
+      display: block;
+      padding: 1em;
+      color: white;
+  }
+
+  .header-icons{
+    margin: 0;   
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    
+    -webkit-flex-flow: row wrap;
+    justify-content: flex-start;
+}
+.header-actions img h1{
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+}
