--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
-<p *ngIf="user"> Welcome {{user?.displayName}}</p>
-<button *ngIf="!user" type="button" class="primary-btn" (click)="signIn()">Sign In</button>
-<button *ngIf="!user" type="button" class="primary-btn" (click)="registration()">Register</button>
-<button *ngIf="user" type="button" class="primary-btn" (click)="logout()">Log out</button>
+<nb-layout>
+    <nb-sidebar>
+        <app-modules></app-modules>
+    </nb-sidebar>
+    <nb-layout-column class="colored-column-success">
+        <app-module-description></app-module-description>
+    </nb-layout-column>
+</nb-layout>
