first prototype release

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nb-layout>
     <nb-layout-header fixed>
         <app-header class="header"></app-header>
-    </nb-layout-header>
+    </nb-layout-header>    
     <nb-layout-column class="colored-column-basic">
         <router-outlet></router-outlet>
     </nb-layout-column>
-    <nb-layout-footer>Contact us</nb-layout-footer>
+    <nb-layout-footer fixed>Contact us</nb-layout-footer>
 </nb-layout>
