--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="registrationForm" autocomplete="off">
     <div class="container">
         <p>{{authError?.message}}</p>
-      <h1>Register</h1>
+      <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
       <label for="firstName"><b>First Name</b></label>
@@ -17,6 +17,6 @@
       <input type="password" placeholder="Enter Password" formControlName="password" name="psw">
   
       <hr>
-      <button type="submit" class="registerbtn" (click)="createUser()">Register</button>
+      <button type="submit" class="registerbtn" (click)="createUser()">Sign Up</button>
     </div>
   </form>
