--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <nb-layout>
-    <nb-sidebar>
+    <nb-layout-column class="colored-column-success sidebar-actions">
         <app-modules></app-modules>
-    </nb-sidebar>
+    </nb-layout-column>
     <nb-layout-column class="colored-column-success">
-        <app-module-description></app-module-description>
+        <router-outlet></router-outlet>
     </nb-layout-column>
 </nb-layout>
