--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
   }
   
   /* Full-width input fields */
-  input[type=text], input[type=password] {
+  input[type=text], input[type=password],input[type=number] ,select,.add-item-expiry {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -70,6 +70,8 @@
       
       -webkit-flex-flow: row wrap;
       justify-content: flex-end;
+      flex-direction: row;
+      flex: auto;
   }
   .header-actions button{
     text-decoration: none;
@@ -94,4 +96,11 @@
     display: block;
     padding: 1em;
     color: white;
+}
+.add-item-expiry{
+  border-style: none !important;
+}
+.colored-column-success.sidebar-actions{
+  max-width: 20%;
+  padding: 0;
 }
