--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<table id="myTable">
+    <tr>
+    <th> Category</th>
+      <th>Name</th>
+      <th>Company</th>
+      <th>Expiry</th>
+      <th>Quantity</th>
+    </tr>
+    <tr *ngFor="let item of (items$ | async)" [ngClass]="{'danger': getClassName(item?.Expiry) === 0, 'warning': getClassName(item?.Expiry) === 1 }">
+        <td> {{(item.Category | variety | async)?.Category}}</td>
+        <td>{{item.Name}}</td>
+        <td>{{item.Company}}</td>
+        <td>{{ item.Expiry?.seconds * 1000 | date }}</td>
+        <td>{{item.Quantity}} {{ (item.MeasureIn | qantity | async)?.Name}}</td>
+    </tr>
+  </table>
