--- a/src/app/module/view-item/view-item.component.html
+++ b/src/app/module/view-item/view-item.component.html
@@ -1,1 +1,16 @@
-<p>view-item works!</p>
+<table id="kitchen-items">
+    <tr>
+            <th> Category</th>
+            <th>Name</th>
+            <th>Company</th>
+            <th>Expiry</th>
+            <th>Quantity</th>
+    </tr>
+    <tr *ngFor="let item of (items$ | async)">
+            <td> {{(item.Category | variety | async)?.Category}}</td>
+            <td>{{item.Name}}</td>
+            <td>{{item.Company}}</td>
+            <td>{{ item.Expiry?.seconds * 1000 | date }}</td>
+            <td>{{item.Quantity}} {{ (item.MeasureIn | qantity | async)?.Name}}</td>
+    </tr>
+</table>
