--- a/src/app/module/update-item/update-item.component.html
+++ b/src/app/module/update-item/update-item.component.html
@@ -4,18 +4,23 @@
     </nb-card-header>
     <nb-card-body>
         <form [formGroup]="form">
-            <label for="category"><b>Category</b></label>
-            <select formControlName="category" name="category">
-                <option *ngFor="let vr of (vr$|async)" [value]="vr.id">
-                    {{vr.Category}}
-                </option>
-            </select>
-            <label for="quantity"><b>Quanity</b></label>
-            <input type="number" placeholder="Enter quantity" formControlName="quantity" name="quantity">
+            <div class="full-width">
+                <label for="category"><b>Category</b></label>
+                <select formControlName="category" name="category">
+                    <option *ngFor="let vr of (vr$|async)" [value]="vr.id">
+                        {{vr.Category}}
+                    </option>
+                </select>
+            </div>
+            <div class="full-width">
+                <label for="quantity"><b>Quanity</b></label>
+                <input type="number" placeholder="Enter quantity" formControlName="quantity" name="quantity">
+                <span>{{(mesureIn | qantity | async)?.Name}}</span>
+            </div>
         </form>
     </nb-card-body>
     <nb-card-footer>
-        <button nbButton status="primary" (click)="updateItem()">Active</button>
-        <button nbButton status="danger" (click)="close()">Cancel</button>
+        <button class="quick-margin" nbButton status="primary" (click)="updateItem()">Update</button>
+        <button class="quick-margin" nbButton status="danger" (click)="close()">Cancel</button>
     </nb-card-footer>
 </nb-card>
