--- a/src/app/module/view-item/view-item.component.css
+++ b/src/app/module/view-item/view-item.component.css
@@ -3,13 +3,34 @@ table {
     width: 100%;
     border: 1px solid #ddd;
     overflow: auto;
+    background-color: #fff;
   }
   
   th, td {
     text-align: left;
     padding: 16px;
+    text-align: center;
   }
-  
-  tr:nth-child(even) {
+  tr:first-child{
+    background: #033f9e;
+    color: #fff;
+    text-transform: uppercase;
+  }
+ tr:nth-child(even) {
     background-color: #f2f2f2
+  }
+  .sort-header .sort-icon-display{
+    display: none;
+  }
+  .sort-header:hover .sort-icon-display{
+    display: inline;
+  }
+  .sort-icon-display{
+    display: inline;
+  }
+  .display-none{
+    display: none;
+  }
+  .filter-table{
+    display: inline-block;
   }
