commit before angular 9 upgrade

--- a/src/app/module/view-item/view-item.component.html
+++ b/src/app/module/view-item/view-item.component.html
@@ -56,7 +56,7 @@
                 <th>Quantity</th>
                 <th>Action
                         <nb-actions class="filter-table" size="small">
-                                <nb-action  icon="funnel-outline" title="Filter">
+                                <nb-action  icon="funnel-outline" title="Filter" (click)="openFilterDialog()">
                                 </nb-action>
                         </nb-actions>
 
