--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -9,15 +9,16 @@ table {
     text-align: left;
     padding: 16px;
   }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2
-  }
   .danger{
-      background-color: #8b0000 !important;
-      color: #f2f2f2;
-  }
+    background-color: #8b0000 !important;
+    color: #f2f2f2;
+}
+  
   .warning{
       background-color: #ff6700;
       color: #f2f2f2;
+  }
+  .recipe-suggestion-btn{
+    float: right;
+    margin: 0 0 12px 0;
   }
