--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,21 @@
+<div>
+  <button nbButton status="primary" class="recipe-suggestion-btn" (click)="openSuggestion()">
+    Suggest Recipe
+</button>
+</div>
 <table id="myTable">
     <tr>
-    <th> Category</th>
+      <th></th>
+      <th> Category</th>
       <th>Name</th>
       <th>Company</th>
       <th>Expiry</th>
       <th>Quantity</th>
     </tr>
     <tr *ngFor="let item of (items$ | async)" [ngClass]="{'danger': getClassName(item?.Expiry) === 0, 'warning': getClassName(item?.Expiry) === 1 }">
+        <td>
+          <input type="checkbox" [value]="item?.Name" (change)="selectionChange($event)">
+        </td>
         <td> {{(item.Category | variety | async)?.Category}}</td>
         <td>{{item.Name}}</td>
         <td>{{item.Company}}</td>
