--- a/src/styles.css
+++ b/src/styles.css
@@ -115,3 +115,8 @@
 .nb-theme-default nb-layout .layout .layout-container .content .columns nb-layout-column{
   padding: 5px !important;
 }
+.recipies-view {
+  max-width: 90% !important;
+  max-height: 90vh !important;
+  overflow: auto;
+}
