--- a/src/app/recipe/add-recipe/add-recipe.component.html
+++ b/src/app/recipe/add-recipe/add-recipe.component.html
@@ -8,7 +8,7 @@
                 *ngFor="let item of receipeForm.get('ingradients')['controls']; let i = index;">
                 <div [formGroupName]="i" class="recipe-wrapper">
                     <input formControlName="name" type="text" nbInput fieldSize="medium" shape="semi-round"
-                        placeholder="Ingradient...">
+                        placeholder="Ingredients...">
                     <nb-actions size="small" class="inline-block-actions">
                         <nb-action *ngIf="(receipeForm.get('ingradients')['controls'].length-1)===i" icon="plus-outline"
                             title="Add new filter" (click)="addItem()"></nb-action>
@@ -19,7 +19,7 @@
         <img [src]="imageUrl" height="200" *ngIf="imageUrl">
         <div>
             <label for="file">Recipe Picture: </label>
-            <input type="file" nbInput (change)="upload($event)" accept=".png,.jpg" />
+            <input type="file" nbInput (change)="upload($event)" accept=".png,.jpg,.gif" />
         </div>
     </nb-card-body>
     <nb-card-footer>
